# ssh-mcp

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  manifest.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: build-dxt.sh
ssh_mcp/: audit.py  connection.py  hostkeys.py  safety.py  server.py  settings.py  shell.py
ssh_mcp/tools/: __init__.py  _shared.py  read.py  write.py
tests/: test_server.py
