[project]
name = "ssh-mcp"
version = "0.12.0"
description = "FastMCP server for running SSH commands on network equipment"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Eric Kenny" }]
keywords = ["mcp", "fastmcp", "ssh", "network-automation", "scrapli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastmcp>=3.0",
    "scrapli>=2024.7.30",
    "scrapli-community>=2024.7.30",
    "asyncssh>=2.14",
    "pydantic>=2.0",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/CyberneticCodeComposer/ssh-mcp"
Repository = "https://github.com/CyberneticCodeComposer/ssh-mcp"
Issues = "https://github.com/CyberneticCodeComposer/ssh-mcp/issues"
Changelog = "https://github.com/CyberneticCodeComposer/ssh-mcp/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ssh_mcp"]

[project.scripts]
ssh-mcp = "ssh_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pragmatic ruleset: pyflakes + pycodestyle errors/warnings, import sorting,
# bugbear (real bugs), pyupgrade (modernize), simplify (idioms).
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
    "E501",  # line-length is handled by `ruff format`
    "SIM117", # nested `with` blocks are often clearer than combined ones
    "B008",  # FastMCP/Pydantic patterns use defaults that read as fn calls
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # `assert False` shows up in pytest negative-path patterns

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
# Untyped third-party deps (scrapli, asyncssh) are stubbed below; the project's
# own code carries type hints throughout but isn't `--strict`-clean yet.
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["scrapli.*", "scrapli_community.*", "asyncssh.*"]
ignore_missing_imports = true
